# bazel_BUILD

cpp3rdlib/boost/include/: BUILD.bazel  boost.bzl
cpp3rdlib/thrift/include/: BUILD.bazel
